--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body{
    font-family: "Poppins", sans-serif;
+   background-color: rgb(229, 229, 229);
 }
 
 html{
@@ -29,18 +30,26 @@ a, .btn{
 
 nav, .nav-links{
     display: flex;
+    
 }
 
 nav{
     justify-content: space-around;
     align-items: center;
     height: 17vh;
+    background-color: rgb(53,53,53);
+    color: white;
+    
 }
 
 .nav-links{
     gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
+}
+
+nav a{
+    color: white;
 }
 
 a{
@@ -198,11 +207,15 @@ section{
     gap: 1rem;
 }
 
+#profile-pic{
+    border-radius: 50%;
+}
+
 /* ICONS */
 
 .icon{
     cursor: pointer;
-    height: 2rem;
+    height: 1.5rem;
 }
 
 /* BUTTONS */
@@ -273,6 +286,7 @@ section{
 
 .about-pic{
     border-radius: 2rem;
+    box-shadow: 10px 8px rgb(53,53,53)
 }
 
 .arrow{
@@ -282,12 +296,11 @@ section{
 }
 
 .details-container{
-    padding: 1.5rem;
+    padding: 2rem;
     flex: 1;
     background: white;
     border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
-    border-color: rgb(163, 163, 163);
+    border: black 2px solid;
     text-align: center;
 }
 
@@ -331,23 +344,17 @@ section{
 }
 
 article{
-    display: flex;
     width: 10rem;
-    justify-content: space-around;
-    gap: 0.5rem;
-}
-
-.article
-{
-    display: flex;
-    width: 10rem;
-    justify-content: space-around;
-    gap: 0.5rem;
+    border: 2px solid rgb(53,53,53);
+    border-radius: 12px;
+    padding: 10px;
+    box-shadow: 8px 8px ;
 }
 
 article .icon{
     cursor: default;
 }
+
 
 /* PROJECTS */
 
@@ -356,7 +363,7 @@ article .icon{
 }
 
 .color-container{
-    border-color: rgb(163, 163, 163);
+    border: black 2px solid;
     background: rgb(250, 250, 250);
 }
 
@@ -389,8 +396,7 @@ article .icon{
     display: flex;
     justify-content: center;
     border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem, solid;
-    border-color: rgb(163, 163, 163);
+    border: black 2px solid;
     background: (250,250,250);
     margin: 2rem auto;
     padding: 0.5rem;
@@ -418,8 +424,10 @@ article .icon{
 
 /* FOOTER SECTION */
 footer{
+    background-color: rgb(53,53,53);
     height: 26vh;
-    margin: 0 1rem;
+    margin: 0;
+    color: white;
 }
 
 footer p{
